# oretachi

./: .env  .env.development  .gitignore  CHANGELOG.md  LICENSE  README.md  README_ja.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.claude/: settings.json
.claude/skills/: release.md
.github/workflows/: release.yml
docs/: setup-guide.md
scripts/: build-sidecar.mjs  copy-vendor.mjs
src/: App.vue  ArtifactViewerApp.vue  CodeReviewApp.vue  SubWindowApp.vue  TrayPopupApp.vue  main.ts  monaco-workers.ts  styles.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/notify/: Cargo.toml
src-tauri/notify/src/: main.rs
src-tauri/skills/background-command/: SKILL.md
src-tauri/skills/domain-model-diagram/: SKILL.md
src-tauri/skills/domain-model-diagram/templates/: components--EntityBox.jsx  components--RelationshipLine.jsx  data--entities.example.jsx  data--relationships.example.jsx  entry-point.jsx
src-tauri/skills/wireframe/: SKILL.md
src-tauri/skills/wireframe/templates/: components--W.jsx  components--layout.jsx  components--primitives.jsx  entry-point.jsx  screens--OverviewScreen.example.jsx  screens--screen.example.jsx
src-tauri/src/: acrylic.rs  ai_commit_message.rs  ai_description.rs  ai_judge.rs  ai_provider.rs  archive_db.rs  claude_plugin.rs  claude_plugin_skills.rs  fs_watcher.rs  git_worktree.rs  ide_launcher.rs  job_object.rs  lib.rs  main.rs  main_thread_watch.rs  mcp_server.rs  process_utils.rs  pty_manager.rs  redirection_guard.rs  report_db.rs  script_runner.rs  settings.rs  system_metrics.rs  task_db.rs  task_executor.rs  terminal_session.rs  worktree_desc_db.rs
src/components/: AddTaskDialog.vue  AddWorktreeDialog.vue  ArchiveTable.vue  AutoApprovalPromptDialog.vue  FrameContainer.vue  FramePane.vue  HomeCatTerminal.vue  HomeView.vue  HotkeyCharDialog.vue  HotkeyInput.vue  IdeSelectDialog.vue  MacTrafficLights.vue  PostAddSettingsDialog.vue  RemoveWorkgroupDialog.vue  RemoveWorktreeDialog.vue  SettingsView.vue  TaskCard.vue  TerminalThumbnail.vue  TerminalView.vue  TrayButton.vue  WorkgroupBar.vue  WorkgroupEditDialog.vue  WorktreeCard.vue  WorktreeHeader.vue
src/components/artifact/: ArtifactCodeView.vue  ArtifactHtmlView.vue  ArtifactMarkdownView.vue  ArtifactMermaidView.vue  ArtifactReactView.vue  ArtifactSvgView.vue
src/components/codereview/: CodeReviewSettingsView.vue  CodeReviewTabs.vue  CommitDiffView.vue  EditorChatButton.vue  FileTreePanel.vue  GitChangesPane.vue  GitGraphPane.vue  GitPanel.vue  MonacoDiffViewer.vue  MonacoFileViewer.vue  QuickOpenPalette.vue  ReviewFilePanel.vue  ReviewSessionView.vue
src/components/settings/: SettingsHotkeySection.vue  SettingsRepositoriesSection.vue
src/components/wizard/: FirstRunWizard.vue  WizardHomeMock.vue  WizardPhaseStrip.vue  WizardStepHomeHotkeys.vue  WizardStepLanguageAgent.vue  WizardStepTrayHotkeys.vue  WizardStepWelcome.vue  WizardStepWorkspace.vue
src/composables/: useAddTaskDialog.ts  useAnsiPalette.ts  useAppAutoApproval.ts  useAppHotkeys.ts  useArchivePersistence.ts  useArtifactWindow.ts  useAutoApproval.ts  useAutoApprovalPrompt.ts  useAutoHotkey.ts  useCat.ts  useCodeReviewLineChat.ts  useCodeReviewSettings.ts  useCodeReviewTabs.ts  useCodeReviewWindow.ts  useEventListeners.ts  useFrameLayout.ts  useHomePanel.ts  useHotkeys.ts  useIdeSelect.ts  useInfiniteScroll.ts  useLoopTick.ts  useMasonryLayout.ts  useNotifications.ts  usePlatform.ts  usePostAddSettings.ts  usePty.ts  usePtyDispatcher.ts  usePtyWriteBatcher.test.ts  usePtyWriteBatcher.ts  useQuickOpen.ts  useRemoveWorktreeDialog.ts  useRepositoryActions.ts  useReviewSession.ts  useSettings.ts  useShutdownGuard.ts  useSubWindowEvents.ts  useSubWindows.ts  useTabs.ts  useTaskExecution.ts  useTaskPersistence.ts  (+16 more)
src/constants/: aiAgents.ts
src/i18n/: en.ts  index.ts  ja.ts
src/types/: archive.ts  artifact.ts  frame.ts  ide.ts  settings.ts  task.ts  terminal.ts  worktree.ts
src/utils/: autoApproval.test.ts  autoApproval.ts  decodePtyOutput.ts  eventLoopMonitor.ts  fuzzyMatch.ts  log.ts  notificationSound.ts  reactArtifactSrcdoc.ts  uiScale.ts
